--- a/API/SafeDesk365.DesignPoCWebApp/_Imports.razor
+++ b/API/SafeDesk365.DesignPoCWebApp/_Imports.razor
@@ -10,3 +10,8 @@
 @using SafeDesk365.DesignPoCWebApp.Shared
 
 @using SafeDesk365.SDK
+@using SafeDesk365.DesignPoCWebApp.Components
+@using SafeDesk365.SDK.Models
+
+@using Radzen
+@using Radzen.Blazor
