--- a/API/SafeDesk365.DesignPoCWebApp/Components/DeskAvailabilityList.razor
+++ b/API/SafeDesk365.DesignPoCWebApp/Components/DeskAvailabilityList.razor
@@ -1,50 +1,66 @@
-﻿<div class="container-fluid p-0" style="position: relative">
+﻿@using SafeDesk365.DesignPoCWebApp.Data
+
+@inject SafeDesk365Service SafeDesk365Service;
+@inject NotificationService NotificationService; 
+
+<div class="container-fluid p-0" style="position: relative">
     <div class="row no-gutters mx-n2">
-        <div class="col-lg-8 p-2">
+        <div class="col-lg-12 p-2">
             <RadzenCard>
-                @*<h3>Issue List</h3>*@
                 <div class="row">
                     <div class="col">
-                        <RadzenButton Icon="add_circle_outline" class="btn" style="margin-bottom: 10px" Text="Add New Booking" Click="@InsertRow" Disabled=@(DeskAvailabilityToInsert != null) />
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
+                        @if(isLoading)
+                        {
+                            <Spinner></Spinner>
+                        }
+                        else
+                        {
                         <RadzenDataGrid @ref="DeskAvailabilitiesGrid" AllowFiltering="true" AllowPaging="true" PageSize="10" AllowSorting="true" EditMode="DataGridEditMode.Single"
-                                        Data="@DeskAvailabilities" TItem="DeskAvailability" RowUpdate="@OnUpdateRow" RowCreate="@OnCreateRow">
+                                        Data="@DeskAvailabilities" TItem="DeskAvailability">
                             <Columns>
                                 @*<RadzenDataGridColumn TItem="Booking" Property="Code" Title="ID" Width="120px" />
                                     <RadzenDataGridColumn TItem="Booking" Property="User" Title="User" Width="280px" >
                                     </RadzenDataGridColumn>*@
-                                <RadzenDataGridColumn TItem="DeskAvailability" Property="DeskCode" Title="Desk" Width="280px">
+                                <RadzenDataGridColumn TItem="DeskAvailability" Property="Code" Title="Desk" Width="150px">
                                 </RadzenDataGridColumn>
                                 <RadzenDataGridColumn TItem="DeskAvailability" Property="Location" Title="Location" Width="150px">
                                 </RadzenDataGridColumn>
-                                <RadzenDataGridColumn TItem="DeskAvailability" Property="Date" Title="Date" Width="100px">
-                                    <Template Context="b">
-                                        @String.Format("{0:d}", b.Date)
-                                    </Template>
-                                    <EditTemplate Context="b">
-                                        <RadzenDatePicker @bind-Value="b.Date" Style="width:100%" />
-                                    </EditTemplate>
+                                <RadzenDataGridColumn TItem="DeskAvailability" Property="Date" Title="Date" Width="100px" SortOrder="SortOrder.Ascending" Filterable="false">
+                                    <Template Context="da">
+                                        @String.Format("{0:d}", da.Date)
+                                    </Template>                                   
                                 </RadzenDataGridColumn>
-                                <RadzenDataGridColumn TItem="DeskAvailability" Property="TimeSlot" Title="TimeSlot" Width="100px">
-                                </RadzenDataGridColumn>                                
-                                <RadzenDataGridColumn TItem="DeskAvailability" Title="Delete" Context="order" Filterable="false" Sortable="false" TextAlign="TextAlign.Center" Width="60px">
-                                    <Template Context="order">
-                                        @if (order.Date >= DateTime.Today)
+                                <RadzenDataGridColumn TItem="DeskAvailability" Property="TimeSlot" Title="TimeSlot" Width="150px">
+                                </RadzenDataGridColumn>  
+                                <RadzenDataGridColumn TItem="DeskAvailability" Property="Facilities" Title="Facilities" Width="150px">
+                                </RadzenDataGridColumn> 
+                                @if (ListType == DisplayType.Details)
+                                {
+                                    <RadzenDataGridColumn TItem="DeskAvailability" Property="CoffeeMachineDistance" Title="Coffee Distance"  Width="170px">
+                                    </RadzenDataGridColumn> 
+                                    <RadzenDataGridColumn TItem="DeskAvailability" Property="Description" Title="Description" Width="200px">
+                                    <Template Context="da">
+                                            <p>@da.Description</p>
+                                        </Template>
+                                    </RadzenDataGridColumn> 
+                                    <RadzenDataGridColumn TItem="DeskAvailability" Property="Picture" Title="Picture" Width="100px">
+                                        <Template Context="da">
+                                            <img style="width: 60px" src="@da.Picture"/>
+                                        </Template>
+                                    </RadzenDataGridColumn>
+                                }
+                                <RadzenDataGridColumn TItem="DeskAvailability" Title="Book" Context="order" Filterable="false" Sortable="false" TextAlign="TextAlign.Center" Width="60px">
+                                    <Template Context="da">
+                                        @if (da.Date >= DateTime.Today)
                                         {
-                                            <RadzenButton ButtonStyle="ButtonStyle.Danger" Icon="delete" Size="ButtonSize.Small" Class="m-1" Click="@(args => DeleteRow(order))" @onclick:stopPropagation="true">
+                                            <RadzenButton ButtonStyle="ButtonStyle.Primary" Icon="more_time" Size="ButtonSize.Small" Class="m-1" Click="@(args => OnCreateBooking(da))" @onclick:stopPropagation="true">
                                             </RadzenButton>
                                         }
                                     </Template>
-                                    <EditTemplate Context="order">
-                                        <RadzenButton ButtonStyle="ButtonStyle.Danger" Icon="delete" Size="ButtonSize.Small" Class="m-1" Click="@(args => DeleteRow(order))">
-                                        </RadzenButton>
-                                    </EditTemplate>
                                 </RadzenDataGridColumn>
                             </Columns>
                         </RadzenDataGrid>
+                        }
                     </div>
                 </div>
             </RadzenCard>
@@ -56,3 +72,8 @@
 @code {
 
 }
+
+
+@* <EditTemplate Context="b">
+                                        <RadzenDatePicker @bind-Value="b.Date" Style="width:100%" />
+                                    </EditTemplate>*@
