--- a/API/SafeDesk365.DesignPoCWebApp/Pages/Index.razor
+++ b/API/SafeDesk365.DesignPoCWebApp/Pages/Index.razor
@@ -13,7 +13,12 @@
 <BookingsList Bookings="@allBookings" ></BookingsList>
 
 <h1>All Availabilities</h1>
-<DeskAvailabilityList DeskAvailabilities="@allDeskAvailabilities"></DeskAvailabilityList>
+<DeskAvailabilityList ListType="DisplayType.Details"></DeskAvailabilityList>
+
+<h1>Small Availabilities</h1>
+<DeskAvailabilityList ListType="DisplayType.Simple"></DeskAvailabilityList>
+
+
 @code {
     List<Booking> upcomingBookings;
     List<Booking> allBookings;
@@ -31,7 +36,7 @@
         {
             upcomingBookings = await SafeDesk365Service.GetUpcomingBookings("thomy@zxqg4.onmicrosoft.com");
             allBookings = await SafeDesk365Service.GetBookings("thomy@zxqg4.onmicrosoft.com");
-            allDeskAvailabilities = await SafeDesk365Service.GetDeskAvailability("2022-04-28T00:00:00");
+            allDeskAvailabilities = await SafeDesk365Service.GetDeskAvailability();
             StateHasChanged();
         }
 
