--- a/API/SafeDesk365.DesignPoCWebApp/Shared/MainLayout.razor
+++ b/API/SafeDesk365.DesignPoCWebApp/Shared/MainLayout.razor
@@ -1,5 +1,8 @@
 ﻿@inherits LayoutComponentBase
 
+<RadzenDialog />
+<RadzenNotification />
+
 <PageTitle>BookADeskDesignPoC</PageTitle>
 
 <div class="page">
