--- a/TeamsTab/SafeDesk365.TeamsTab/Pages/Tab.razor
+++ b/TeamsTab/SafeDesk365.TeamsTab/Pages/Tab.razor
@@ -1,58 +1,14 @@
 ﻿@page "/"
 @page "/tab"
+@using Azure.Core
 @using Microsoft.Graph
 @using SafeDesk365.TeamsTab.Components;
 
-@inject TeamsFx teamsfx
-@inject TeamsUserCredential teamsUserCredential
 @inject MicrosoftTeams MicrosoftTeams
+@inject SafeDesk365Service SafeDesk365Service
+@inject TeamsUserCredential TeamsUserCredential;
 
 <h1>My upcoming bookings</h1>
-<BookingsList listType="BookingListType.Upcoming" UserEmail="thomy@zxqg4.onmicrosoft.com" ></BookingsList>
+<BookingsList ListType="BookingListType.Upcoming" FilterType="BookingListFilter.CurrentUser"></BookingsList>
 
-
-@code {
-
-    string userName;
-    string errorMessage;
-    bool isInTeams;
-    bool isLoading = true; 
-
-    public User Profile { get; set; }
-    public string UserPhotoUri { get; set; }
-
-    private readonly string _scope = "User.Read";
-
-    protected override async Task OnAfterRenderAsync(bool firstRender)
-    {
-        await base.OnAfterRenderAsync(firstRender);
-
-        if(firstRender)
-        {
-            isInTeams = await MicrosoftTeams.IsInTeams();
-
-            if (isInTeams)
-            { 
-                var user = await teamsUserCredential.GetUserInfoAsync();
-                userName = user.DisplayName;
-                var x = user.ObjectId;
-                var y = 10;
-            }
-            else
-            {
-                errorMessage = "Not running in Microsoft Teams.";
-            }
-
-            isLoading = false;
-            StateHasChanged();            
-        }
-    }
-
-    private GraphServiceClient GetGraphServiceClient()
-    {
-        var msGraphAuthProvider = new MsGraphAuthProvider(teamsUserCredential, _scope);
-        var client = new GraphServiceClient(msGraphAuthProvider);
-        return client;
-    }
-}
 
