--- a/TeamsTab/SafeDesk365.TeamsTab/Pages/NewBooking.razor
+++ b/TeamsTab/SafeDesk365.TeamsTab/Pages/NewBooking.razor
@@ -5,7 +5,7 @@
 @inject SafeDesk365Service SafeDesk365Service;
 
 <h1>All Availabilities</h1>
-<div class="row">
+@*<div class="row">
     <div class="col-lg-2 p-2">
         <RadzenDropDown Data="@locations" @bind-Value="selectedLocation" ValueProperty="Name" AllowFiltering="true" AllowClear="true" TValue="string" TextProperty="Name" ></RadzenDropDown>
     </div>
@@ -15,7 +15,7 @@
     <div class="col-lg-2 p-2">
         <RadzenButton Icon="add_circle_outline" class="btn" style="margin-bottom: 10px" Text="Filter" Click=@Filter />
     </div>
-</div>
+</div>*@
 <div class="row">
     <div class="col">
         <DeskAvailabilityList ListType="DisplayType.Simple"></DeskAvailabilityList>
